Authenticate user from backend
